--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>aryan</h1>
+<p>
+  <mat-toolbar>
+    <span>Crypto Checker</span>
+    <span class="example-spacer"></span>
+    <mat-form-field>
+      <mat-select (valueChange)="sendCurrency($event)" class="text-sm" [(ngModel)]="selectedCurrency">
+        <mat-option selected value="INR">INR</mat-option>
+        <mat-option value="USD">USD</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-toolbar>
+</p>
